New version 0.1.11. Read more https://github.com/xdan/jodit/releases/tag/0.1.11

--- a/src/components/tab/style.module.css
+++ b/src/components/tab/style.module.css
@@ -8,6 +8,7 @@
 .header {
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc;
+    font-size: 0;
 }
 .button {
     display: inline-block;
