--- a/src/components/master/style.module.css
+++ b/src/components/master/style.module.css
@@ -12,6 +12,33 @@
     padding: 0 10px 0 0;
     width: 68%;
 }
+
+.rightside select,
+.rightside input[type=text],
+.rightside input[type=number],
+.rightside input[type=url],
+.rightside textarea {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.rightside textarea {
+    height: 134px;
+}
+
 @media(max-width: 950px) {
     .layout {
         /*background-color: #f6f6f6;*/
