--- a/src/components/tab/style.module.css
+++ b/src/components/tab/style.module.css
@@ -20,10 +20,13 @@
     height: 23px;
     cursor: pointer;
     font-size: 12px;
+    opacity: .7;
+    user-select: none;
 }
 .buttonActive {
     position: relative;
     bottom: -1px;
-    background-color: #dedede;
-    color: #222;
+    background-color: #5f5f5f;
+    color: #fff;
+    opacity: 1;
 }
