New version 0.1.21. Read more https://github.com/xdan/jodit/releases/tag/0.1.21

--- a/src/components/master/style.module.css
+++ b/src/components/master/style.module.css
@@ -13,6 +13,9 @@
     width: 68%;
 }
 
+.rightside {
+    line-height: 16px;
+}
 .rightside select,
 .rightside input[type=text],
 .rightside input[type=number],
