New version 0.1.34. Read more https://github.com/xdan/jodit/releases/tag/0.1.34

--- a/src/components/checkbox/style.module.css
+++ b/src/components/checkbox/style.module.css
@@ -3,6 +3,9 @@
     margin-bottom: 10px;
     font-size: 12px;
 }
+.label:last-child{
+    margin-bottom: 0;
+}
 
 label {
     display: inline-block;
