--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,14 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+hr,
+fieldset {
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 1px;
+    margin-bottom: 10px;
+}
+hr {
+    border-width: 0 0 1px 0;
+}
