New version 0.1.44. Read more https://github.com/jodit/jodit-docs/releases/tag/0.1.44

--- a/src/components/data/style.module.css
+++ b/src/components/data/style.module.css
@@ -1,6 +1,7 @@
 .box {
     position: relative;
-    display: inline-block;
+    display: block;
+    z-index: 10000;
 }
 .popup {
     position: absolute;
