New version 0.1.45. Read more https://github.com/jodit/jodit-docs/releases/tag/0.1.45

--- a/src/components/data/style.module.css
+++ b/src/components/data/style.module.css
@@ -1,7 +1,7 @@
 .box {
     position: relative;
-    display: block;
-    z-index: 10000;
+    display: inline-block;
+    z-index: 1000;
 }
 .popup {
     position: absolute;
