--- a/src/components/checkbox/style.module.css
+++ b/src/components/checkbox/style.module.css
@@ -7,8 +7,8 @@
     margin-bottom: 0;
 }
 
-label {
-    display: inline-block;
+.label label {
+    display: inline-block !important;
     max-width: 100%;
 }
 :global(.react-toggle) {
