New version 0.1.99. Read more https://github.com/jodit/jodit-docs/releases/tag/0.1.99

--- a/src/components/master/style.module.css
+++ b/src/components/master/style.module.css
@@ -103,3 +103,14 @@
 .defaultRestore {
     margin-bottom:  10px;
 }
+
+.exampleHeader {
+    display: flex;
+    align-items: center;
+    margin: 16px 0;
+}
+
+.exampleHeader > * {
+    color: #5f5f5f;
+    margin: 0 16px 0 0;
+}
