--- a/src/components/master/style.module.css
+++ b/src/components/master/style.module.css
@@ -1,116 +1,116 @@
 .layout {
-    /*background-color: #f6f6f6;*/
-    /*border: 1px solid #ccc;*/
-    display: flex
+	/*background-color: #f6f6f6;*/
+	/*border: 1px solid #ccc;*/
+	display: flex;
 }
 .rightside {
-    width: 32%;
-    padding: 0;
+	width: 32%;
+	padding: 0;
 }
 
 .leftside {
-    padding: 0 10px 0 0;
-    width: 68%;
+	padding: 0 10px 0 0;
+	width: 68%;
 }
 
 .rightside {
-    line-height: 16px;
+	line-height: 16px;
 }
 .rightside select,
-.rightside input[type=text],
-.rightside input[type=number],
-.rightside input[type=url],
+.rightside input[type='text'],
+.rightside input[type='number'],
+.rightside input[type='url'],
 .rightside textarea {
-    display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 0px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	display: block;
+	width: 100%;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 0px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-webkit-transition: border-color ease-in-out 0.15s,
+		-webkit-box-shadow ease-in-out 0.15s;
+	-o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+	transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 .rightside textarea {
-    height: 134px;
+	height: 134px;
 }
 
-@media(max-width: 950px) {
-    .layout {
-        /*background-color: #f6f6f6;*/
-        /*border: 1px solid #ccc;*/
-        display: block
-    }
-    .rightside {
-        width: 100%;
-    }
+@media (max-width: 950px) {
+	.layout {
+		/*background-color: #f6f6f6;*/
+		/*border: 1px solid #ccc;*/
+		display: block;
+	}
+	.rightside {
+		width: 100%;
+	}
 
-    .leftside {
-        width: 100%;
-    }
+	.leftside {
+		width: 100%;
+	}
 }
 .item {
-
 }
 
 .leftside h2,
-.rightside h2{
-    margin: 10px 0;
-    font-weight: 500;
-    font-size: 1.2em;
+.rightside h2 {
+	margin: 10px 0;
+	font-weight: 500;
+	font-size: 1.2em;
 }
 
-.defaultRestore button{
-    color: #fafafa;
-    border: 0;
-    padding: 0 10px;
-    line-height: 31px;
-    height: 31px;
-    background-color: #19ab27;
-    vertical-align: middle;
-    transition: background-color linear .2s;
+.defaultRestore button {
+	color: #fafafa;
+	border: 0;
+	padding: 0 10px;
+	line-height: 31px;
+	height: 31px;
+	background-color: #19ab27;
+	vertical-align: middle;
+	transition: background-color linear 0.2s;
 }
 .defaultRestore button:before {
-    content: '';
-    width: 16px;
-    height: 16px;
-    display: inline-block;
-    vertical-align: middle;
-    background: url(../button/resore.svg) no-repeat center center;
-    background-size: cover;
-    margin-right:  5px;
-    margin-top: -2px;
-    filter: invert(100%);
-    transition: transform linear .2s;
+	content: '';
+	width: 16px;
+	height: 16px;
+	display: inline-block;
+	vertical-align: middle;
+	background: url(../button/resore.svg) no-repeat center center;
+	background-size: cover;
+	margin-right: 5px;
+	margin-top: -2px;
+	filter: invert(100%);
+	transition: transform linear 0.2s;
 }
 .defaultRestore button:active:before {
-    transform: rotate(-180deg);
+	transform: rotate(-180deg);
 }
 .defaultRestore button:hover {
-    background-color: #7bab70;
+	background-color: #7bab70;
 }
 .defaultRestore button:active {
-    background-color: #0076ab;
+	background-color: #0076ab;
 }
 
 .defaultRestore {
-    margin-bottom:  10px;
+	margin-bottom: 10px;
 }
 
 .exampleHeader {
-    display: flex;
-    align-items: center;
-    margin: 16px 0;
+	display: flex;
+	align-items: center;
+	margin: 16px 0;
 }
 
 .exampleHeader > * {
-    color: #5f5f5f;
-    margin: 0 16px 0 0 !important;
+	color: #5f5f5f;
+	margin: 0 16px 0 0 !important;
 }
